<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/first_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/welfare"
            android:icon="@mipmap/icon_girl"
            android:title="@string/welfare" />

        <item
            android:id="@+id/history"
            android:icon="@mipmap/icon_history"
            android:title="@string/history" />

        <item
            android:id="@+id/category"
            android:icon="@mipmap/icon_category"
            android:title="@string/category" />

        <item
            android:id="@+id/android"
            android:icon="@mipmap/icon_android"
            android:title="@string/android" />

    </group>

    <group
        android:id="@+id/second_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@mipmap/icon_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/about"
            android:icon="@mipmap/icon_about"
            android:title="@string/about" />

    </group>

</menu>